# hive-tenant-gateway

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md
migrations/: 20260518000001_init.sql  20260526000001_llm_providers.sql  20260527000001_api_key_public_id.sql  20260530000001_chat_history.sql  20260530000002_tenant_preferences.sql  20260530000003_schedules.sql
src/: auth.rs  budget.rs  error.rs  ledger.rs  lib.rs  rate_limit.rs  tenant.rs  vault.rs
src/frontier/: anthropic.rs  mod.rs  openai.rs
src/routes/: admin.rs  chats.rs  demo.rs  health.rs  mcp.rs  me.rs  mod.rs  orchestrate.rs  schedules.rs  signup.rs  ui.rs
src/tenant/: in_memory.rs  mod.rs  pg.rs
tests/: README.md  integration.rs
